force-app/main/default/objects/User/fields/ActivationRequired__c.field-meta.xml
<CustomField>
    <fullName>ActivationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Required</label>
    <type>Checkbox</type>
</CustomField>