force-app/main/default/objects/User/fields/CreatedByGL__c.field-meta.xml
<CustomField>
    <fullName>CreatedByGL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By GL</label>
    <type>Checkbox</type>
</CustomField>