force-app/main/default/objects/User/fields/FreeGoodsBudget__c.field-meta.xml
<CustomField>
    <fullName>FreeGoodsBudget__c</fullName>
    <inlineHelpText>Personal free goods budget for the current calendar year. Maintained by Sales Management.</inlineHelpText>
    <label>Free Goods Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>