force-app/main/default/objects/User/fields/FreeGoodsBudgetActive__c.field-meta.xml
<CustomField>
    <fullName>FreeGoodsBudgetActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Free goods orders of this user are charged against the personal budget. Without this flag the Free Goods order type cannot be selected.</inlineHelpText>
    <label>Budget Active</label>
    <type>Checkbox</type>
</CustomField>