force-app/main/default/objects/User/fields/FreeGoodsBudgetRemaining__c.field-meta.xml
<CustomField>
    <fullName>FreeGoodsBudgetRemaining__c</fullName>
    <formula>BLANKVALUE(FreeGoodsBudget__c, 0) - BLANKVALUE(FreeGoodsBudgetUsed__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget minus used budget. Shown in the Order Wizard.</inlineHelpText>
    <label>Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>