force-app/main/default/objects/User/fields/FreeGoodsBudgetUsed__c.field-meta.xml
<CustomField>
    <fullName>FreeGoodsBudgetUsed__c</fullName>
    <inlineHelpText>Sum of free goods orders charged to this budget in the current calendar year. Written by the system when the ERP order is created, reduced by returns. Do not edit.</inlineHelpText>
    <label>Budget Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>