force-app/main/default/objects/User/fields/IsSalesResponsible__c.field-meta.xml
<CustomField>
    <fullName>IsSalesResponsible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks users that hold a SAP responsibility key. Used as a filter in list views and flows.</description>
    <label>Sales Responsibility Holder</label>
    <type>Checkbox</type>
</CustomField>