force-app/main/default/objects/User/fields/KAMJuniorKAM__c.field-meta.xml
<CustomField>
    <fullName>KAMJuniorKAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAM Junior KAM</label>
    <type>Checkbox</type>
</CustomField>