force-app/main/default/objects/User/fields/KamKey__c.field-meta.xml
<CustomField>
    <fullName>KamKey__c</fullName>
    <description>Key account assignment from SAP KNVV-KVGR3. Populate for key account managers only.</description>
    <label>Key Account Key (SAP KVGR3)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KA1</fullName>
            </value>
            <value>
                <fullName>KA2</fullName>
            </value>
            <value>
                <fullName>KA3</fullName>
            </value>
            <value>
                <fullName>KA4</fullName>
            </value>
            <value>
                <fullName>KA5</fullName>
            </value>
            <value>
                <fullName>KA6</fullName>
            </value>
            <value>
                <fullName>KA7</fullName>
            </value>
            <value>
                <fullName>KA8</fullName>
            </value>
            <value>
                <fullName>KA9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>