force-app/main/default/objects/User/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <externalId>true</externalId>
    <label>Old ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>