force-app/main/default/objects/User/fields/OutOfOfficeApproverId__c.field-meta.xml
<CustomField>
    <fullName>OutOfOfficeApproverId__c</fullName>
    <label>Out of Office Approver Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>