force-app/main/default/objects/User/fields/OutOfOfficeFrom__c.field-meta.xml
<CustomField>
    <fullName>OutOfOfficeFrom__c</fullName>
    <label>Out of Office from</label>
    <type>Date</type>
</CustomField>