force-app/main/default/objects/User/fields/OutOfOfficeUntil__c.field-meta.xml
<CustomField>
    <fullName>OutOfOfficeUntil__c</fullName>
    <label>Out of Office until</label>
    <type>Date</type>
</CustomField>