force-app/main/default/objects/User/fields/PendingActivation__c.field-meta.xml
<CustomField>
    <fullName>PendingActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Activation</label>
    <type>Checkbox</type>
</CustomField>