force-app/main/default/objects/User/fields/SalesOfficeKey__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeKey__c</fullName>
    <description>Sales office from SAP KNVV-VKBUR.</description>
    <label>Sales Office Key (SAP VKBUR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1010</fullName>
            </value>
            <value>
                <fullName>1020</fullName>
            </value>
            <value>
                <fullName>1030</fullName>
            </value>
            <value>
                <fullName>1040</fullName>
            </value>
            <value>
                <fullName>1050</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2035</fullName>
            </value>
            <value>
                <fullName>2040</fullName>
            </value>
            <value>
                <fullName>2045</fullName>
            </value>
            <value>
                <fullName>2050</fullName>
            </value>
            <value>
                <fullName>2055</fullName>
            </value>
            <value>
                <fullName>3010</fullName>
            </value>
            <value>
                <fullName>3020</fullName>
            </value>
            <value>
                <fullName>3030</fullName>
            </value>
            <value>
                <fullName>3040</fullName>
            </value>
            <value>
                <fullName>3050</fullName>
            </value>
            <value>
                <fullName>4010</fullName>
            </value>
            <value>
                <fullName>4020</fullName>
            </value>
            <value>
                <fullName>4030</fullName>
            </value>
            <value>
                <fullName>4040</fullName>
            </value>
            <value>
                <fullName>4050</fullName>
            </value>
            <value>
                <fullName>4060</fullName>
            </value>
            <value>
                <fullName>4070</fullName>
            </value>
            <value>
                <fullName>4080</fullName>
            </value>
            <value>
                <fullName>4090</fullName>
            </value>
            <value>
                <fullName>7010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>