force-app/main/default/objects/User/fields/SelfRegistered__c.field-meta.xml
<CustomField>
    <fullName>SelfRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1565</description>
    <label>Self Registered?</label>
    <type>Checkbox</type>
</CustomField>