force-app/main/default/objects/User/fields/SignatureRichText__c.field-meta.xml
<CustomField>
    <fullName>SignatureRichText__c</fullName>
    <label>Signature RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>