force-app/main/default/objects/User/listViews/All_Users_without_Customer_Community.listView-meta.xml
<ListView>
    <fullName>All_Users_without_Customer_Community</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Customer Community Plus User</value>
    </filters>
    <label>All Users (without Customer Community)</label>
</ListView>